--- a/environment.yml
+++ b/environment.yml
@@ -1,85 +1,90 @@
 name: aia
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.7.2=h06a4308_0
+  - ca-certificates=2024.8.30=hbcca054_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - debugpy=1.6.7=py311h6a678d5_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
   - expat=2.6.3=h6a678d5_0
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.27.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - krb5=1.21.3=h143b758_0
   - ld_impl_linux-64=2.40=h12ee557_0
+  - libedit=3.1.20230828=h5eee18b_0
   - libffi=3.4.4=h6a678d5_1
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgomp=14.1.0=h77fa898_1
+  - libsodium=1.0.20=h4ab18f5_0
+  - libstdcxx=14.1.0=hc0a3c3a_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.15=h5eee18b_0
-  - pip=24.2=py312h06a4308_0
-  - python=3.12.5=h5148396_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - openssl=3.3.2=hb9d3cd8_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=24.2=py311h06a4308_0
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
+  - psutil=5.9.0=py311h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - python=3.11.9=h955ad1f_0
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - pyzmq=25.1.2=py311h6a678d5_0
   - readline=8.2=h5eee18b_0
-  - setuptools=75.1.0=py312h06a4308_0
+  - setuptools=75.1.0=py311h06a4308_0
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - tk=8.6.14=h39e8969_0
-  - wheel=0.44.0=py312h06a4308_0
+  - tornado=6.4.1=py311h5eee18b_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - wheel=0.44.0=py311h06a4308_0
   - xz=5.4.6=h5eee18b_1
+  - zeromq=4.3.5=ha4adb4c_5
+  - zipp=3.20.2=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_1
   - pip:
-      - absl-py==2.1.0
-      - astunparse==1.6.3
-      - beautifulsoup4==4.12.3
-      - blinker==1.8.2
-      - certifi==2024.8.30
-      - charset-normalizer==3.3.2
-      - click==8.1.7
-      - deepface==0.0.93
-      - filelock==3.16.1
-      - fire==0.6.0
-      - flask==3.0.3
-      - flask-cors==5.0.0
-      - flatbuffers==24.3.25
-      - gast==0.6.0
-      - gdown==5.2.0
-      - google-pasta==0.2.0
-      - grpcio==1.66.1
-      - gunicorn==23.0.0
-      - h5py==3.12.1
-      - idna==3.10
-      - itsdangerous==2.2.0
-      - jinja2==3.1.4
-      - keras==3.5.0
-      - libclang==18.1.1
-      - markdown==3.7
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - mdurl==0.1.2
-      - ml-dtypes==0.4.1
-      - mtcnn==0.1.1
-      - namex==0.0.8
-      - numpy==1.26.4
-      - opencv-python==4.10.0.84
-      - opt-einsum==3.4.0
-      - optree==0.12.1
-      - packaging==24.1
+      - aif360==0.6.1
+      - contourpy==1.3.0
+      - cycler==0.12.1
+      - fonttools==4.54.1
+      - imageio==2.35.1
+      - joblib==1.4.2
+      - kiwisolver==1.4.7
+      - lazy-loader==0.4
+      - lime==0.2.0.1
+      - matplotlib==3.9.2
+      - networkx==3.3
+      - numpy==2.1.1
       - pandas==2.2.3
       - pillow==10.4.0
-      - protobuf==4.25.5
-      - pygments==2.18.0
-      - pysocks==1.7.1
-      - python-dateutil==2.9.0.post0
+      - pyparsing==3.1.4
       - pytz==2024.2
-      - requests==2.32.3
-      - retina-face==0.0.17
-      - rich==13.8.1
-      - six==1.16.0
-      - soupsieve==2.6
-      - tensorboard==2.17.1
-      - tensorboard-data-server==0.7.2
-      - tensorflow==2.17.0
-      - termcolor==2.4.0
+      - scikit-image==0.24.0
+      - scikit-learn==1.5.2
+      - scipy==1.14.1
+      - threadpoolctl==3.5.0
+      - tifffile==2024.9.20
       - tqdm==4.66.5
-      - typing-extensions==4.12.2
       - tzdata==2024.2
-      - urllib3==2.2.3
-      - werkzeug==3.0.4
-      - wrapt==1.16.0
